@@ -7,10 +7,16 @@ import com.objectcomputing.checkins.exceptions.BadArgException;
 import com.objectcomputing.checkins.notifications.email.EmailSender;
 import com.objectcomputing.checkins.notifications.email.MailJetFactory;
 import com.objectcomputing.checkins.services.feedback_request.FeedbackRequestServices;
+import com.objectcomputing.checkins.services.feedback_request.FeedbackRequestRepository;
 import com.objectcomputing.checkins.services.feedback_request.FeedbackRequest;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfileRepository;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfile;
+import com.objectcomputing.checkins.services.email.AutomatedEmail;
+import com.objectcomputing.checkins.services.email.AutomatedEmailRepository;
+import io.micronaut.context.annotation.Value;
 import io.micronaut.context.env.Environment;
+import io.micronaut.core.io.Readable;
+import io.micronaut.core.io.IOUtils;
 import jakarta.inject.Named;
 import jakarta.inject.Singleton;
 import jakarta.validation.constraints.NotNull;
@@ -25,37 +31,56 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.HashMap;
+import java.io.BufferedReader;
+import java.time.temporal.ChronoUnit;
 
 @Singleton
 class ReviewPeriodServicesImpl implements ReviewPeriodServices {
 
     private static final Logger LOG = LoggerFactory.getLogger(ReviewPeriodServicesImpl.class);
 
+    private final AutomatedEmailRepository automatedEmailRepository;
     private final ReviewPeriodRepository reviewPeriodRepository;
     private final ReviewAssignmentRepository reviewAssignmentRepository;
     private final MemberProfileRepository memberProfileRepository;
     private final FeedbackRequestServices feedbackRequestServices;
+    private final FeedbackRequestRepository feedbackRequestRepository;
     private final ReviewStatusTransitionValidator reviewStatusTransitionValidator;
     private EmailSender emailSender;
     private final Environment environment;
     private final String webAddress;
 
+    private enum SelfReviewDate { LAUNCH, THREE_DAYS, ONE_DAY }
+
+    @Value("classpath:mjml/supervisor_review_assignment.mjml")
+    private Readable supervisorReviewAssignmentTemplate;
+    @Value("classpath:mjml/review_period_announcement.mjml")
+    private Readable reviewPeriodAnnouncementTemplate;
+    @Value("classpath:mjml/self_review_reminder.mjml")
+    private Readable selfReviewReminderTemplate;
+
     ReviewPeriodServicesImpl(ReviewPeriodRepository reviewPeriodRepository,
                                     ReviewAssignmentRepository reviewAssignmentRepository,
                                     MemberProfileRepository memberProfileRepository,
                                     FeedbackRequestServices feedbackRequestServices,
+                                    FeedbackRequestRepository feedbackRequestRepository,
                                     ReviewStatusTransitionValidator reviewStatusTransitionValidator,
-                                    @Named(MailJetFactory.HTML_FORMAT) EmailSender emailSender,
+                                    @Named(MailJetFactory.MJML_FORMAT) EmailSender emailSender,
                                     Environment environment,
-                                    CheckInsConfiguration checkInsConfiguration) {
+                                    CheckInsConfiguration checkInsConfiguration,
+                                    AutomatedEmailRepository automatedEmailRepository) {
         this.reviewPeriodRepository = reviewPeriodRepository;
         this.reviewAssignmentRepository = reviewAssignmentRepository;
         this.memberProfileRepository = memberProfileRepository;
         this.feedbackRequestServices = feedbackRequestServices;
+        this.feedbackRequestRepository = feedbackRequestRepository;
         this.reviewStatusTransitionValidator = reviewStatusTransitionValidator;
         this.emailSender = emailSender;
         this.environment = environment;
         this.webAddress = checkInsConfiguration.getWebAddress();
+        this.automatedEmailRepository = automatedEmailRepository;
     }
 
    void setEmailSender(EmailSender emailSender) {
@@ -173,8 +198,20 @@ class ReviewPeriodServicesImpl implements ReviewPeriodServices {
                          " does not have a self-review template.");
             }
 
+            Set<String> allInvolved = new HashSet<>();
             Set<UUID> selfRevieweeIds = new HashSet<>();
             for (ReviewAssignment assignment : assignments) {
+                Optional<MemberProfile> reviewerProfile =
+                  memberProfileRepository.findById(assignment.getReviewerId());
+                if (!reviewerProfile.isEmpty()) {
+                    allInvolved.add(reviewerProfile.get().getWorkEmail());
+                }
+                Optional<MemberProfile> revieweeProfile =
+                  memberProfileRepository.findById(assignment.getRevieweeId());
+                if (!revieweeProfile.isEmpty()) {
+                    allInvolved.add(revieweeProfile.get().getWorkEmail());
+                }
+
                 // This person is being reviewed and will need a self-review
                 // request.
                 selfRevieweeIds.add(assignment.getRevieweeId());
@@ -197,9 +234,44 @@ class ReviewPeriodServicesImpl implements ReviewPeriodServices {
                                         selfReviewCloseDate);
                 }
             }
+
+            String emailContent = constructReviewPeriodAnnouncementEmail(
+                period.getName(), period.getPeriodStartDate(),
+                period.getPeriodEndDate(), period.getLaunchDate(),
+                period.getSelfReviewCloseDate(), period.getCloseDate()
+            );
+            emailSender.sendEmail(null, null, "It's time for performance reviews!", emailContent, allInvolved.toArray(new String[0]));
         }
 
         return period;
+    }
+
+    private String dateAsString(LocalDateTime dateTime) {
+        String str = String.format("%s %d, %d",
+                                   dateTime.getMonth(),
+                                   dateTime.getDayOfMonth(),
+                                   dateTime.getYear());
+        return str.substring(0, 1) + str.substring(1).toLowerCase();
+    }
+
+    private String constructReviewPeriodAnnouncementEmail(
+                       String reviewPeriodName, LocalDateTime startDate,
+                       LocalDateTime endDate, LocalDateTime launchDate,
+                       LocalDateTime selfReviewDate, LocalDateTime closeDate
+) {
+        try {
+            return String.format(IOUtils.readText(
+                            new BufferedReader(
+                                reviewPeriodAnnouncementTemplate.asReader())),
+                            reviewPeriodName, reviewPeriodName,
+                            dateAsString(startDate), dateAsString(endDate),
+                            dateAsString(launchDate),
+                            dateAsString(selfReviewDate),
+                            dateAsString(closeDate));
+        } catch(Exception ex) {
+            LOG.error(ex.toString());
+            return "";
+        }
     }
 
     private void notifyRevieweeSupervisorsByReviewPeriod(UUID reviewPeriodId, String reviewPeriodName) {
@@ -217,14 +289,20 @@ class ReviewPeriodServicesImpl implements ReviewPeriodServices {
         List<String> supervisorEmails = memberProfileRepository.findWorkEmailByIdIn(supervisorIdsToString);
 
         // send notification to supervisors
-        String emailContent = constructEmailContent(reviewPeriodId, reviewPeriodName);
+        String emailContent = constructSupervisorEmail(reviewPeriodId, reviewPeriodName);
         emailSender.sendEmail(null, null, "Review Assignments Awaiting Approval", emailContent, supervisorEmails.toArray(new String[0]));
     }
 
-    private String constructEmailContent (UUID reviewPeriodId, String reviewPeriodName){
-        return """
-                <h3>Review Assignments for Review Period '%s' are ready for your approval.</h3>\
-                <a href="%s/feedback/reviews?period=%s">Click here</a> to review and approve reviewer assignments in the Check-Ins app.""".formatted(reviewPeriodName, webAddress, reviewPeriodId);
+    private String constructSupervisorEmail(UUID reviewPeriodId, String reviewPeriodName){
+        try {
+            return String.format(IOUtils.readText(
+                            new BufferedReader(
+                                supervisorReviewAssignmentTemplate.asReader())),
+                            reviewPeriodName, webAddress, reviewPeriodId);
+        } catch(Exception ex) {
+            LOG.error(ex.toString());
+            return "";
+        }
     }
 
     private void validateDates(ReviewPeriod period) {
@@ -282,6 +360,115 @@ class ReviewPeriodServicesImpl implements ReviewPeriodServices {
             feedbackRequestServices.save(request);
         } catch(Exception ex) {
             LOG.error(ex.toString());
+        }
+    }
+
+    public void sendNotifications(LocalDate today) {
+        List<ReviewPeriod> openPeriods =
+            reviewPeriodRepository.findByReviewStatus(ReviewStatus.OPEN);
+        for(ReviewPeriod openPeriod : openPeriods) {
+            for(SelfReviewDate date : SelfReviewDate.values()) {
+                String key = "self_review_notification" +
+                             openPeriod.getId().toString() + date.toString();
+                Optional<AutomatedEmail> sent = automatedEmailRepository.findById(key);
+                if (sent.isEmpty()) {
+                    LocalDateTime check;
+                    switch(date) {
+                        case SelfReviewDate.LAUNCH:
+                            check = openPeriod.getLaunchDate();
+                            break;
+                        case SelfReviewDate.THREE_DAYS:
+                            check = openPeriod.getSelfReviewCloseDate();
+                            if (check != null) {
+                                check = check.minus(3, ChronoUnit.DAYS);
+                            }
+                            break;
+                        default:
+                        case SelfReviewDate.ONE_DAY:
+                            check = openPeriod.getSelfReviewCloseDate();
+                            if (check != null) {
+                                check = check.minus(1, ChronoUnit.DAYS);
+                            }
+                            break;
+                    }
+
+                    if (check != null) {
+                        if (today.isEqual(check.toLocalDate())) {
+                            sendSelfReviewEmail(openPeriod.getId(), date);
+                            automatedEmailRepository.save(new AutomatedEmail(key));
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    void sendSelfReviewEmail(UUID reviewPeriodId, SelfReviewDate date) {
+        Optional<ReviewPeriod> reviewPeriod =
+            reviewPeriodRepository.findById(reviewPeriodId);
+        if (reviewPeriod.isEmpty()) {
+            LOG.error("Unable to find review period: " + reviewPeriodId.toString());
+            return;
+        }
+
+        // Determine which subject we need to use.
+        String subject = "";
+        switch(date) {
+            case SelfReviewDate.LAUNCH:
+                subject = reviewPeriod.get().getName() + " has launched!";
+                break;
+            case SelfReviewDate.THREE_DAYS:
+                subject = reviewPeriod.get().getName() +
+                          " closes in three days!";
+                break;
+            default:
+            case SelfReviewDate.ONE_DAY:
+                subject = reviewPeriod.get().getName() + " closes in one day!";
+                break;
+        }
+
+        try {
+            // Read in the email template.
+            String template = IOUtils.readText(
+                                  new BufferedReader(
+                                      selfReviewReminderTemplate.asReader()));
+
+            // Get the set of self-reviewer email addresses.
+            Set<MemberProfile> recipients = new HashSet<>();
+            String templateId = null;
+            List<FeedbackRequest> requests =
+                feedbackRequestRepository.findByValues(null, null, null, null,
+                                                       reviewPeriodId.toString(),
+                                                       templateId);
+            for (FeedbackRequest request : requests) {
+                if (request.getRecipientId().equals(request.getRequesteeId())) {
+                    Optional<MemberProfile> requesteeProfile =
+                        memberProfileRepository.findById(
+                            request.getRequesteeId());
+                    if (!requesteeProfile.isEmpty()) {
+                        recipients.add(requesteeProfile.get());
+                    }
+                }
+            }
+
+            List<String> addresses = recipients.stream()
+                                         .map(p -> p.getWorkEmail()).toList();
+            if (!addresses.isEmpty()) {
+                // Customize the email content using the template.
+                String content = String.format(
+                                     template, webAddress,
+                                     reviewPeriodId.toString(),
+                                     dateAsString(reviewPeriod.get()
+                                                    .getSelfReviewCloseDate()),
+                                     webAddress);
+
+                // Send out the email to everyone.
+                emailSender.sendEmail(null, null, subject, content,
+                                      addresses.toArray(
+                                          new String[addresses.size()]));
+            }
+        } catch(Exception ex) {
+            LOG.error("Send Self-Review Email: " + ex.toString());
         }
     }
 }
